--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,20 @@
             </plugin>
         </plugins>
     </build>
-
+<build>
+    <plugins>
+        <plugin> 
+            <groupId>org.apache.maven.plugins</groupId> 
+            <artifactId>maven-surefire-plugin</artifactId> 
+            <configuration> 
+                <argLine>-Xmx512m</argLine> 
+                <forkMode>pertest</forkMode> 
+                <childDelegation>true</childDelegation> 
+                <testFailureIgnore>true</testFailureIgnore> 
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
