--- a/pom.xml
+++ b/pom.xml
@@ -1,75 +1,53 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 
-    <groupId>com.techprimers.testing</groupId>
-    <artifactId>jenkins-example</artifactId>
-    <version>1.0-SNAPSHOT</version>
+	<modelVersion>4.0.0</modelVersion>
 
+    <groupId>mvambaster</groupId>
+    <artifactId>Maven_teste</artifactId>
+    <packaging>jar</packaging>
+    <version>2.0-SNAPSHOT</version>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <junit.jupiter.version>5.0.0-M3</junit.jupiter.version>
-        <junit.platform.version>1.0.0-M3</junit.platform.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
+	    
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-compiler-plugin</artifactId>
-                      <version>3.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
+		    <artifactId>maven-war-plugin</artifactId>
+			    <version>2.3</version>
+			    <extensions>false</extensions>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        
+                        <configuration>
+                            <transformers>
+                                <transformer>
+                                    <mainClass>Project_Teste</mainClass>
+                                </transformer>
+                            </transformers>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
-            <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-surefire-plugin</artifactId>
-                      <version>2.19.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.0.0-M3</version>
-                             
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
+	    </plugins>            
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.0.0-M3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>${junit.platform.version}</version>
-        </dependency>
-
-    </dependencies>
-
-    <repositories>
-        <repository>
-            <id>myMavenRepo.releases</id>
-            <url>http://localhost:8081/repository/maven-releases/</url>
-        </repository>
-    </repositories>
-
     <distributionManagement>
         <repository>
-            <id>myMavenRepo.snapshots</id>
-            <url>http://localhost:8081/repository/maven-snapshots/</url>
-        </repository>
+            <id>deployment</id>
+            <name>Internal Releases</name>
+            <url>http://localhost:8081/repository/maven-releases/</url>            
+        </repository>        
+        <snapshotRepository>
+            <id>deployment</id>
+            <name>Internal Releases Snapshot</name>
+            <url>http://localhost:8081/repository/maven-snapshots/</url>            
+        </snapshotRepository>
     </distributionManagement>
-
 </project>
